--- a/sqlite3/Cargo.toml
+++ b/sqlite3/Cargo.toml
@@ -32,6 +32,9 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 [dev-dependencies]
 tempfile = { workspace = true }
 
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+libloading = "0.8"
+
 [package.metadata.capi.header]
 name = "sqlite3.h"
 
